# Salome-GEOM

./: .gitignore  CMakeLists.txt
src/BlockFix/: BlockFix.cxx  BlockFix_UnionEdges.cxx  BlockFix_UnionFaces.cxx  CMakeLists.txt
src/GEOMAlgo/: CMakeLists.txt  GEOMAlgo_AlgoTools.cxx  GEOMAlgo_AlgoTools.hxx  GEOMAlgo_ClsfSolid.hxx  GEOMAlgo_DataMapOfPassKeyInteger.hxx  GEOMAlgo_FinderShapeOn2.cxx  GEOMAlgo_FinderShapeOn2.hxx  GEOMAlgo_GetInPlaceAPI.hxx  GEOMAlgo_Gluer.cxx  GEOMAlgo_IndexedDataMapOfIntegerShape.hxx  GEOMAlgo_PassKey.cxx  GEOMAlgo_PassKey.hxx  GEOMAlgo_PassKeyMapHasher.cxx  GEOMAlgo_PassKeyMapHasher.hxx  GEOMAlgo_PassKeyShape.cxx  GEOMAlgo_PassKeyShape.hxx  GEOMAlgo_PassKeyShapeMapHasher.cxx  GEOMAlgo_PassKeyShapeMapHasher.hxx
src/GEOMGUI/: GeometryGUI.cxx
src/GEOMImpl/: GEOMImpl_ICurvesOperations.cxx  GEOMImpl_ITestOperations.cxx  GEOMImpl_ShapeProximityDriver.cxx
src/GEOMUtils/: GEOMUtils.cxx  GEOMUtils.hxx
src/OCC2VTK/: OCC2VTK_Tools.cxx
src/STEPPlugin/: STEPPlugin_ExportDriver.cxx
src/STLPlugin/: STLPlugin_ExportDriver.cxx
src/ShHealOper/: CMakeLists.txt
